# task_v1

./: README.md
task_v1/: CMakeLists.txt  task_v1.sln
task_v1/Debug/: task_v1.ilk
task_v1/task_v1/: Atom.cpp  Atom.h  CMakeLists.txt  Conveyor.cpp  Conveyor.h  FileIO.cpp  FileIO.h  Handlers.cpp  Handlers.h  Operator.cpp  Operator.h  f1.cfg  f2.cfg  task_v1.cpp  task_v1.vcxproj  task_v1.vcxproj.filters
task_v1/task_v1/Debug/: task_v1.exe.recipe  vc142.idb
task_v1/task_v1/Debug/task_v1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  task_v1.lastbuildstate
